
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {char* desc; } ;


 int MAX_ARCH ;
 TYPE_1__* architectures ;
 int exit (int) ;
 int printf (char*,...) ;

void usage(char* argv0)
{
 int i;
 printf(": Usage: %s target box [port] [-c N]\n\n", argv0);
 printf("  target - supported box eg: 0x00\n");
 printf("  box - hostname or IP address\n");
 printf("  port - port for ssl connection\n");
 printf("  -c open N connections. (use range 40-50 if u dont know)\n");
 printf("  \n\n");
 printf("  Supported OffSet:\n");

 for (i=0; i<=MAX_ARCH; i++) {
  printf("\t0x%02x - %s\n", i, architectures[i].desc);
 }
 printf("\nFuck to all guys who like use lamah ddos. Read SRC to have no surprise\n");

 exit(1);
}
